--- a/single food.html
+++ b/single food.html
@@ -80,16 +80,16 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="https://www.facebook.com/." class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="https://www.twitter.com/." class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                  <a href="https://www.twitter.com" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/." class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.instagram.com" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/." class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                  <a href="https://www.youtube.com" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
                 </li>
               </ul>
             </div>
@@ -122,7 +122,7 @@
         </div>
         <div class="row" id="lightgallery">
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/cake_small.jpg" data-sub-html="<h4>Cake</h4><p>ad amet aliquid?</p>">
+            data-src="images/big-images/cake_small.jpg" data-sub-html="<h4>Cake</h4><p></p>">
             <a href="#"><img src="images/cake_small.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
@@ -130,7 +130,7 @@
             <a href="#"><img src="images/pizza_small.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/salad_big.jpg" data-sub-html="<h4>Salad</h4><p>doloribus.</p>">
+            data-src="images/big-images/salad_big.jpg" data-sub-html="<h4>Salad</h4><p></p>">
             <a href="#"><img src="images/salad_big.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
