--- a/single people.html
+++ b/single people.html
@@ -122,38 +122,38 @@
         </div>
         <div class="row" id="lightgallery">
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/img_2.jpg"
-            data-sub-html="<h4>Man</h4><p>ad amet aliquid?</p>">
+            data-sub-html="<h4>Woman</h4><p>ad amet aliquid?</p>">
             <a href="#"><img src="images/img_2.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/img_7.jpg"
-            data-sub-html="<h4>Pizza</h4><p>Pizza</p>">
+            data-sub-html="<h4>Woman</h4><p>Woman</p>">
             <a href="#"><img src="images/img_7.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/person_1.jpg" data-sub-html="<h4>Chicken</h4><p>nte.</p>">
+            data-src="images/big-images/person_1.jpg" data-sub-html="<h4>Woman</h4><p>nte.</p>">
             <a href="#"><img src="images/person_1.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/person_2.jpg" data-sub-html="<h4>Cake</h4><p>.</p>">
+            data-src="images/big-images/person_2.jpg" data-sub-html="<h4>Woman</h4><p>.</p>">
             <a href="#"><img src="images/person_2.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/person_3.jpg" data-sub-html="<h4>Burger</h4><p></p>">
+            data-src="images/big-images/person_3.jpg" data-sub-html="<h4>Man</h4><p></p>">
             <a href="#"><img src="images/person_3.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
 
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/person_5.jpg" data-sub-html="<h4>Pasta</h4><p></p>">
+            data-src="images/big-images/person_5.jpg" data-sub-html="<h4>Man</h4><p></p>">
             <a href="#"><img src="images/person_5.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
 
           <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
-            data-src="images/big-images/person_6.jpg" data-sub-html="<h4>Pasta</h4><p></p>">
+            data-src="images/big-images/person_6.jpg" data-sub-html="<h4>Woman</h4><p></p>">
             <a href="#"><img src="images/person_6.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
 
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src="images/big-images/person_4.jpg"
-            data-sub-html="<h4>Pasta</h4><p></p>">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade"
+            data-src="images/big-images/person_4.jpg" data-sub-html="<h4>Man</h4><p></p>">
             <a href="#"><img src="images/person_4.jpg" alt="IMage" alt="download" class="img-fluid"></a>
           </div>
         </div>
