--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<link rel="stylesheet" href="fonts/icomoon/style.css">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/magnific-popup.css">
-<link rel="stylesheet" href="css/jquery-ui.css">
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
-<link rel="stylesheet" href="css/lightgallery.min.css">
-<link rel="stylesheet" href="css/bootstrap-datepicker.css">
-<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-<link rel="stylesheet" href="css/swiper.css">
-<link rel="stylesheet" href="css/aos.css">
-<link rel="stylesheet" href="css/style.css">
+<html lang="en">
+
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/lightgallery.min.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="css/swiper.css">
+  <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/style.css">
+
+</head>
 
 <body>
   <div class="site-wrap">
@@ -47,9 +54,8 @@
               </li>
               <li><a href="services.html">Services</a></li>
               <li><a href="about.html">about</a></li>
-              <li><a href="contact.html">Validation</a></li>
               <li><a href="json.html">Data Storage</a></li>
-
+              <li><a href="contact.html">Validation</a></li>
               </ul>
             </nav>
           </div>
@@ -58,13 +64,13 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="htttps://www.facebook.com" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
                   <a href="https://www.twitter.com" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
                 </li>
                 <li>
-                  <a href="htttps://www.instagram.com" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.instagram.com" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
                   <a href="https://www.youtube.com" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
@@ -78,7 +84,8 @@
         </div>
     </header>
 
-    <h2>Validation Your Contact</h2>
+
+    <h2>Validation Example</h2>
 
     <form ng-app="myApp" ng-controller="validateCtrl" name="myForm" novalidate>
 
@@ -104,6 +111,7 @@
           <span ng-show="myForm.password.$error.email">password email address.</span>
         </span>
       </p>
+
     </form>
     <div class="col-lg-3 ml-auto">
       <div class="mb-3 bg-white">
@@ -111,69 +119,55 @@
         <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
 
         <p class="mb-0 font-weight-bold">Phone</p>
-        <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+        <p class="mb-4"><a href="#">085864678754</a></p>
 
         <p class="mb-0 font-weight-bold">Email Address</p>
-        <p class="mb-0"><a href="#">youremail@domain.com</a></p>
-
+        <p class="mb-0"><a href="#">kosmasnagara@gmail.com</p>
       </div>
+    </div>
 
+    <script>
+      var app = angular.module('myApp', []);
+      app.controller('validateCtrl', function ($scope) {
+        $scope.user = 'examole';
+        $scope.email = 'examole.doe@gmail.com';
+      });
+    </script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/picturefill.min.js"></script>
+    <script src="js/lightgallery-all.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/main.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('#lightgallery').lightGallery();
+      });
+    </script>
+
+    <div class="footer py-4">
+      <div class="container-fluid text-center">
+        <p>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;
+          <script>document.write(new Date().getFullYear());</script> All rights reserved made with <i
+            class="icon-heart-o" aria-hidden="true"></i> by <a href="index.html">CCIT
+            Photography</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+      </div>
     </div>
   </div>
-  </div>
-
-  </div>
-  </div>
-  </div>
-
-  <div class="footer py-4">
-    <div class="container-fluid text-center">
-      <p>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        Copyright &copy;
-        <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-        <script>document.write(new Date().getFullYear());</script> All rights reserved made with <i class="icon-heart-o"
-          aria-hidden="true"></i> by <a href="index.html">CCIT Photography</a>
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      </p>
-    </div>
-  </div>
-
-
-
-
-
-
-  <script>
-    var app = angular.module('myApp', []);
-    app.controller('validateCtrl', function ($scope) {
-      $scope.user = 'Exampel';
-      $scope.email = 'exampleoe@gmail.com';
-    });
-  </script>
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.countdown.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/bootstrap-datepicker.min.js"></script>
-  <script src="js/swiper.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/picturefill.min.js"></script>
-  <script src="js/lightgallery-all.min.js"></script>
-  <script src="js/jquery.mousewheel.min.js"></script>
-  <script src="js/angular.min.js"></script>
-  <script src="js/main.js"></script>
-
-  <script>
-    $(document).ready(function () {
-      $('#lightgallery').lightGallery();
-    });
-  </script>
 
 </body>
 
