--- a/json.html
+++ b/json.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data Storage</title>
+    <title>CCIT &mdash; Photography Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,7 +42,7 @@
             <div class="site-mobile-menu-body"></div>
         </div>
 
-        <header class="site-navbar py-3" role="banner">
+        <header class="site-navbar py-3 border-bottom" role="banner">
 
             <div class="container-fluid">
                 <div class="row align-items-center">
@@ -57,21 +54,21 @@
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
 
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="single.html">Gallery</a>
                                     <ul class="dropdown">
                                         <li><a href="single.html">Nature</a></li>
                                         <li><a href="single people.html">Portrait</a></li>
                                         <li><a href="single food.html">Food</a></li>
-                                        <li><a href="single sport.html">Sports</a></li>
+                                        <li><a href="single sport.html">Sport</a></li>
                                 </li>
                             </ul>
                             </li>
-                            <li><a href="services.html">Services</a></li>
+                            <li class="active"><a href="services.html">Services</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="json.html">Data Storage</a></li>
                             <li><a href="contact.html">Validation</a></li>
+                            <li><a href="json.html">Data Storage</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -81,7 +78,7 @@
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0"
                                 data-class="social">
                                 <li>
-                                    <a href="htttps://www.facebook.com/" class="pl-0 pr-3"><span
+                                    <a href="https://www.facebook.com/" class="pl-0 pr-3"><span
                                             class="icon-facebook"></span></a>
                                 </li>
                                 <li>
@@ -89,7 +86,7 @@
                                             class="icon-twitter"></span></a>
                                 </li>
                                 <li>
-                                    <a href="htttps://www.instagram.com/" class="pl-3 pr-3"><span
+                                    <a href="https://www.instagram.com/" class="pl-3 pr-3"><span
                                             class="icon-instagram"></span></a>
                                 </li>
                                 <li>
@@ -105,61 +102,21 @@
                                     class="icon-menu h3"></span></a></div>
                     </div>
                 </div>
+            </div>
+
         </header>
-
-
         <h1>Data Storage</h1>
         <table style="width:100%" cellpadding="10px" cellspacing="10px" border="1">
             <thead>
                 <tr>
-                    <th>NO</th>
-                    <th>Nama</th>
-                    <th>Kategori</th>
+                    <th>id</th>
+                    <th>nama</th>
+                    <th>kategori</th>
                     <th>images</th>
                 </tr>
             </thead>
             <tbody></tbody>
         </table>
-
-        <div class="footer py-4">
-            <div class="container-fluid">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;
-                    <script data-cfasync="false"
-                        src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made
-                    with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="index.html">CCIT Photography</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#lightgallery').lightGallery();
-        });
-    </script>
-
 </body>
 
 <script src="dataccit.json"></script>
@@ -178,5 +135,45 @@
         $("<tbody/>", { "class": "mydata", html: items.join("") }).appendTo("table");
     });
 </script>
+
+
+<div class="footer py-4">
+    <div class="container-fluid text-center">
+        <p>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;
+
+            <script>document.write(new Date().getFullYear());</script> All rights reserved | made with <i
+                class="icon-heart-o" aria-hidden="true"></i> by <a href="index.html">CCIT Photography</a>
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        </p>
+    </div>
+</div>
+
+
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/swiper.min.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/picturefill.min.js"></script>
+<script src="js/lightgallery-all.min.js"></script>
+<script src="js/jquery.mousewheel.min.js"></script>
+<script src="js/main.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#lightgallery').lightGallery();
+    });
+</script>
+
+</body>
 
 </html>
